--- a/connector-redis/package.json
+++ b/connector-redis/package.json
@@ -7,11 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/sergiodxa/grial.git"
   },
-  "keywords": [
-    "grial",
-    "grial-connector",
-    "redis"
-  ],
+  "keywords": ["grial", "grial-connector", "redis"],
   "author": "Sergio Daniel Xalambrí <sergiodxa@gmail.com> (https://sergio.xalambri.xyz/)",
   "license": "MIT",
   "bugs": {
