--- a/examples/jsonplaceholder-wrapper/package.json
+++ b/examples/jsonplaceholder-wrapper/package.json
@@ -4,9 +4,9 @@
     "start": "grial start"
   },
   "dependencies": {
-    "@grial/cli": "^1.0.1",
-    "@grial/connector-rest": "^1.0.0",
-    "@grial/server": "^1.0.1",
-    "dataloader": "^1.3.0"
+    "@grial/cli": "latest",
+    "@grial/connector-rest": "latest",
+    "@grial/server": "latest",
+    "dataloader": "latest"
   }
 }
