--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/sergiodxa/grial#readme",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
     "graphql": "^0.10.3",
-    "graphql-server-express": "^1.0.0",
+    "graphql-server-core": "^1.0.2",
+    "graphql-server-module-graphiql": "^1.0.2",
     "graphql-tools": "^1.1.0",
+    "media-typer": "^0.3.0",
+    "raw-body": "^2.2.0",
     "subscriptions-transport-ws": "^0.7.3"
   }
 }
