--- a/cli/package.json
+++ b/cli/package.json
@@ -1,13 +1,18 @@
 {
   "name": "@grial/cli",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "The Grial CLI used to start the API",
   "main": "grial",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sergiodxa/grial.git"
   },
-  "keywords": ["grial", "connector", "fs", "filesystem"],
+  "keywords": [
+    "grial",
+    "connector",
+    "fs",
+    "filesystem"
+  ],
   "author": "Sergio Daniel Xalambrí <sergiodxa@gmail.com> (https://sergio.xalambri.xyz/)",
   "license": "MIT",
   "bugs": {
@@ -18,6 +23,7 @@
     "grial": "./grial"
   },
   "dependencies": {
+    "clipboardy": "^1.1.4",
     "colors": "^1.1.2",
     "commander": "^2.11.0",
     "dotenv": "^4.0.0"
