--- a/examples/basic/now.json
+++ b/examples/basic/now.json
@@ -1,6 +1,7 @@
 {
   "name": "grial-example-basic",
   "alias": "grial-example-basic.now.sh",
+  "public": true,
   "env": {
     "HOST": "localhost",
     "PORT": 3000
