JSONPlaceholder example with full tests and as a public dpeloyment

--- a/examples/jsonplaceholder-wrapper/now.json
+++ b/examples/jsonplaceholder-wrapper/now.json
@@ -1,6 +1,7 @@
 {
   "name": "grial-example-rest-wrapper",
   "alias": "grial-example-rest-wrapper.now.sh",
+  "public": true,
   "env": {
     "HOST": "localhost",
     "PORT": 3000,
