--- a/examples/jsonplaceholder-wrapper/package.json
+++ b/examples/jsonplaceholder-wrapper/package.json
@@ -1,12 +1,27 @@
 {
   "name": "grial-example-jsonplaceholder-wrapper",
   "scripts": {
-    "start": "grial start"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:report": "jest --coverage",
+    "start": "grial start",
+    "alias": "now alias",
+    "predeploy": "npm test",
+    "deploy": "now && now alias",
+    "postdeploy": "npm run alias"
   },
   "dependencies": {
-    "@grial/cli": "latest",
-    "@grial/connector-rest": "latest",
-    "@grial/server": "latest",
+    "@grial/cli": "^1.2.2",
+    "@grial/connector-rest": "^1.0.1",
+    "@grial/server": "^1.3.3",
     "dataloader": "latest"
+  },
+  "devDependencies": {
+    "jest": "^20.0.4"
+  },
+  "jest": {
+    "bail": true,
+    "notify": true,
+    "verbose": true
   }
 }
