--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sergiodxa/grial#readme",
   "dependencies": {
+    "file-exists": "^4.0.0",
     "graphql": "^0.10.3",
     "graphql-server-core": "^1.0.2",
     "graphql-server-module-graphiql": "^1.0.2",
