Change JSONPlaceholder example deploy script

--- a/examples/jsonplaceholder-wrapper/package.json
+++ b/examples/jsonplaceholder-wrapper/package.json
@@ -7,7 +7,7 @@
     "start": "grial start",
     "alias": "now alias",
     "predeploy": "npm test",
-    "deploy": "now && now alias",
+    "deploy": "now",
     "postdeploy": "npm run alias"
   },
   "dependencies": {
