Change with-custom-config example now.json file

--- a/examples/with-custom-config/now.json
+++ b/examples/with-custom-config/now.json
@@ -4,6 +4,8 @@
   "public": true,
   "env": {
     "HOST": "localhost",
-    "PORT": 3000
+    "PORT": 3000,
+    "PUBLIC_HOST": "grial-example-with-custom-config.now.sh",
+    "PUBLIC_PORT": 443
   }
 }
