--- a/examples/jsonplaceholder-wrapper/package.json
+++ b/examples/jsonplaceholder-wrapper/package.json
@@ -11,10 +11,10 @@
     "postdeploy": "npm run alias"
   },
   "dependencies": {
-    "@grial/cli": "^1.3.0",
-    "@grial/connector-rest": "^1.0.1",
-    "@grial/server": "^1.4.0",
-    "dataloader": "^1.3.0"
+    "@grial/cli": "latest",
+    "@grial/connector-rest": "latest",
+    "@grial/server": "latest",
+    "dataloader": "latest"
   },
   "devDependencies": {
     "jest": "^20.0.4"
