--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "grial",
     "grial-server"
   ],
-  "author": "Sergio Daniel Xalambrí <sergiodxa@gmail.com> (https://sergio.xalambri.xyz/)",
+  "author": "Sergio Daniel Xalambrí <sergiodxa@gmail.com> (https://sergio.now.sh/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sergiodxa/grial/issues"
