--- a/cli/package.json
+++ b/cli/package.json
@@ -13,7 +13,7 @@
     "fs",
     "filesystem"
   ],
-  "author": "Sergio Daniel Xalambrí <sergiodxa@gmail.com> (https://sergio.xalambri.xyz/)",
+  "author": "Sergio Daniel Xalambrí <sergiodxa@gmail.com> (https://sergio.now.sh/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sergiodxa/grial/issues"
