Specify the files to be uploaded to npm

--- a/cli/package.json
+++ b/cli/package.json
@@ -29,5 +29,10 @@
   },
   "peerDependencies": {
     "@grial/server": "*"
-  }
+  },
+  "files": [
+    "utils/check-peer-deps.js",
+    "grial",
+    "grial-start"
+  ]
 }
